# ikarus_mirror

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  implementation_details
docs/: DoxyFile  enum_format_fix.js  header.html  project.md
include/: CMakeLists.txt  error.h  id.h  project.h
include/entities/: blueprint.h  entity.h  folder.h  instance.h
include/entities/attributes/: attribute.h  attributetype.h  numberattribute.h  textattribute.h  toggleattribute.h
include/entities/attributes/values/: togglevalue.h
include/ikarus/: CMakeLists.txt  entity_type.h  id.h  macros.h  project.h  status.h  stdtypes.h
include/ikarus/entities/: attributetype.h  blueprint.h  entity.h  folder.h  instance.h
include/ikarus/entities/attributes/: attribute.h  numberattribute.h  textattribute.h  toggleattribute.h
include/ikarus/entities/attributes/values/: togglevalue.h
include/ikarus/types/: PropertySettings.h  entity_type.h  id.h  location.h  object.h  object_scope.h  object_type.h  page_property_value.h  path.h  project.h  property_settings.h  property_type.h  template_deletion_cascade.h  toggle_value.h  value.h
src/: CMakeLists.txt  error.hpp  id.cpp  project.cpp  project.hpp  status.hpp
src/coded/db/: database.cpp  migrations.cpp  migrations.hpp  sqlitehelper.hpp  statement.cpp  statement.hpp  util.hpp
src/coded/db/migrations/: M1674836144_genesis.cpp  M1674836144_genesis.hpp  M1674836160_initial_setup.cpp  M1674836160_initial_setup.hpp
src/coded/entities/: blueprint.cpp  entity.cpp  util.hpp
src/coded/os/fs/: temp.hpp
src/coded/util/: logger.hpp  macros.hpp  templates.hpp
src/coded/util/structs/: option.hpp  result.hpp
src/coded/validation/: arg.hpp
src/db/: database.cpp  database.hpp  database.ipp  database.tpp  db.hpp  migrations.cpp  migrations.hpp  sqlitehelper.hpp  statement.cpp  statement.hpp  statement.ipp  statement.tpp  util.hpp
src/db/migrations/: M1674836144_genesis.cpp  M1674836144_genesis.hpp  M1674836160_initial_setup.cpp  M1674836160_initial_setup.hpp
src/entities/: attribute.cpp  blueprint.cpp  blueprint.hpp  entity.cpp  folder.cpp  folder.hpp  instance.cpp  util.hpp
src/impl/: id.cpp  project.cpp  project.hpp  property_type.cpp  property_type.hpp  status.hpp
src/impl/db/: database.cpp  database.hpp  migrations.cpp  migrations.hpp  sqlitehelper.hpp  statement.hpp  util.hpp
src/impl/db/migrations/: M1674836144_genesis.cpp  M1674836144_genesis.hpp  M1674836160_initial_setup.cpp  M1674836160_initial_setup.hpp
src/impl/entities/: attribute.cpp  blueprint.cpp  entity.cpp  page.cpp  property.cpp  template.cpp  util.cpp  util.hpp
src/impl/os/fs/: temp.hpp
src/impl/util/: arg.hpp  base.hpp  format.hpp  logger.hpp  string.hpp  templates.hpp  transformation.hpp  validation.hpp
src/impl/util/structs/: option.hpp  result.hpp
src/impl/validation/: arg.hpp  validation.hpp
src/os/fs/: temp.hpp
src/types/: object_scope.cpp  value.cpp
src/util/: base.hpp  format.hpp  formatters.hpp  logger.hpp  maths.hpp  status.hpp  string.hpp  templates.hpp  types.hpp
src/util/structs/: option.hpp  result.hpp
src/validation/: arg.hpp
test/: main.cpp
